transmission/deployment.yaml
---
# Source: transmission-openvpn/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-transmission-openvpn
  labels:
    app: transmission-openvpn
    chart: transmission-openvpn-0.1.0
    release: transmission
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission-openvpn
      release: transmission
  template:
    metadata:
      labels:
        app: transmission-openvpn
        release: transmission
    spec:
      volumes:
        - name: transmission
          persistentVolumeClaim:
            claimName: transmission
        - hostPath:
            path: /dev/net/tun
          name: dev-tun
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
      securityContext: {}
      containers:
        - name: transmission-openvpn
          image: "haugene/transmission-openvpn:2.12-armhf"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9091
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /data
              name: transmission
              subPath: configs/transmission-data
            - mountPath: /downloads/transmission
              name: transmission
              subPath: downloads/transmission
            - mountPath: /dev/net/tun
              name: dev-tun
          resources: {}
